@@ -3,6 +3,7 @@
 	* maude-mode.el (maude-start-of-comment): renamed from
 	maude-in-comment-p, return start of comment position instead of
 	t/nil.
+	(maude-indent-line): Support for Maude object-based notation.
 
 2007-07-06  Rudi Schlatte  <rudi@constantly.at>
 
